add_executable(deserialization_routine_tests deserialization_routines_tests.c)

target_link_libraries(deserialization_routine_tests
        PRIVATE yajp::test_common yajp::lib
        )

add_test(NAME DeserializationRoutinesTest1 COMMAND $<TARGET_FILE:deserialization_routine_tests> 1)
add_test(NAME DeserializationRoutinesTest2 COMMAND $<TARGET_FILE:deserialization_routine_tests> 2)
add_test(NAME DeserializationRoutinesTest3 COMMAND $<TARGET_FILE:deserialization_routine_tests> 3)
add_test(NAME DeserializationRoutinesTest4 COMMAND $<TARGET_FILE:deserialization_routine_tests> 4)
add_test(NAME DeserializationRoutinesTest5 COMMAND $<TARGET_FILE:deserialization_routine_tests> 5)
add_test(NAME DeserializationRoutinesTest6 COMMAND $<TARGET_FILE:deserialization_routine_tests> 6)
add_test(NAME DeserializationRoutinesTest7 COMMAND $<TARGET_FILE:deserialization_routine_tests> 7)
add_test(NAME DeserializationRoutinesTest8 COMMAND $<TARGET_FILE:deserialization_routine_tests> 8)
add_test(NAME DeserializationRoutinesTest9 COMMAND $<TARGET_FILE:deserialization_routine_tests> 9)
add_test(NAME DeserializationRoutinesTest10 COMMAND $<TARGET_FILE:deserialization_routine_tests> 10)
add_test(NAME DeserializationRoutinesTest11 COMMAND $<TARGET_FILE:deserialization_routine_tests> 11)
add_test(NAME DeserializationRoutinesTest12 COMMAND $<TARGET_FILE:deserialization_routine_tests> 12)
add_test(NAME DeserializationRoutinesTest13 COMMAND $<TARGET_FILE:deserialization_routine_tests> 13)
add_test(NAME DeserializationRoutinesTest14 COMMAND $<TARGET_FILE:deserialization_routine_tests> 14)
add_test(NAME DeserializationRoutinesTest15 COMMAND $<TARGET_FILE:deserialization_routine_tests> 15)
add_test(NAME DeserializationRoutinesTest16 COMMAND $<TARGET_FILE:deserialization_routine_tests> 16)
add_test(NAME DeserializationRoutinesTest17 COMMAND $<TARGET_FILE:deserialization_routine_tests> 17)
add_test(NAME DeserializationRoutinesTest18 COMMAND $<TARGET_FILE:deserialization_routine_tests> 18)
add_test(NAME DeserializationRoutinesTest19 COMMAND $<TARGET_FILE:deserialization_routine_tests> 19)
add_test(NAME DeserializationRoutinesTest20 COMMAND $<TARGET_FILE:deserialization_routine_tests> 20)
add_test(NAME DeserializationRoutinesTest21 COMMAND $<TARGET_FILE:deserialization_routine_tests> 21)
add_test(NAME DeserializationRoutinesTest22 COMMAND $<TARGET_FILE:deserialization_routine_tests> 22)
add_test(NAME DeserializationRoutinesTest23 COMMAND $<TARGET_FILE:deserialization_routine_tests> 23)
add_test(NAME DeserializationRoutinesTest24 COMMAND $<TARGET_FILE:deserialization_routine_tests> 24)
add_test(NAME DeserializationRoutinesTest25 COMMAND $<TARGET_FILE:deserialization_routine_tests> 25)
add_test(NAME DeserializationRoutinesTest26 COMMAND $<TARGET_FILE:deserialization_routine_tests> 26)
add_test(NAME DeserializationRoutinesTest27 COMMAND $<TARGET_FILE:deserialization_routine_tests> 27)
add_test(NAME DeserializationRoutinesTest28 COMMAND $<TARGET_FILE:deserialization_routine_tests> 28)
add_test(NAME DeserializationRoutinesTest29 COMMAND $<TARGET_FILE:deserialization_routine_tests> 29)
add_test(NAME DeserializationRoutinesTest30 COMMAND $<TARGET_FILE:deserialization_routine_tests> 30)
add_test(NAME DeserializationRoutinesTest31 COMMAND $<TARGET_FILE:deserialization_routine_tests> 31)
add_test(NAME DeserializationRoutinesTest32 COMMAND $<TARGET_FILE:deserialization_routine_tests> 32)
add_test(NAME DeserializationRoutinesTest33 COMMAND $<TARGET_FILE:deserialization_routine_tests> 33)
add_test(NAME DeserializationRoutinesTest34 COMMAND $<TARGET_FILE:deserialization_routine_tests> 34)
add_test(NAME DeserializationRoutinesTest35 COMMAND $<TARGET_FILE:deserialization_routine_tests> 35)
add_test(NAME DeserializationRoutinesTest36 COMMAND $<TARGET_FILE:deserialization_routine_tests> 36)
add_test(NAME DeserializationRoutinesTest37 COMMAND $<TARGET_FILE:deserialization_routine_tests> 37)
add_test(NAME DeserializationRoutinesTest38 COMMAND $<TARGET_FILE:deserialization_routine_tests> 38)
add_test(NAME DeserializationRoutinesTest39 COMMAND $<TARGET_FILE:deserialization_routine_tests> 39)
add_test(NAME DeserializationRoutinesTest40 COMMAND $<TARGET_FILE:deserialization_routine_tests> 40)
add_test(NAME DeserializationRoutinesTest41 COMMAND $<TARGET_FILE:deserialization_routine_tests> 41)
add_test(NAME DeserializationRoutinesTest42 COMMAND $<TARGET_FILE:deserialization_routine_tests> 42)
